$dbhがPDOに対応した。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -7,6 +7,7 @@
 - プラグインの仕組みを追加。initializeプラグインの実装規則を規定。
 - サイトマップの authlevel の処理を実装。
 - サイトマップの orderby の処理を実装。
+- $dbhがPDOに対応。
 - カテゴリトップページを取得する $site->get_category_top() を実装。
 - Not Foundページを出力する $px->page_notfound() を追加実装。
 - サイトマップのパンくず欄が ">" から始まっていた場合、これを削除するように変更。
