changelog.txt を更新。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -4,14 +4,17 @@
 
 ■PxFW 1.0.0b2 (****/**/**)
 
-- プラグインの仕組みを追加。initializeプラグインの実装規則を規定。
-- サイトマップの authlevel の処理を実装。
+- プラグインの仕組みを追加。object, initializeプラグインの実装規則を規定。
+- サイトマップの auth_level の処理を実装。
 - サイトマップの orderby の処理を実装。
 - $dbhがPDOに対応。
+- PX=api に ls コマンドを追加。
 - カテゴリトップページを取得する $site->get_category_top() を実装。
+- 親ページまでのパンくず配列を取得する $site->get_breadcrumb_array() を実装。
 - Not Foundページを出力する $px->page_notfound() を追加実装。
 - サイトマップのパンくず欄が ">" から始まっていた場合、これを削除するように変更。
 - ダイナミックパスのマッチングの順番をソートするように変更。
+- ユーザーDBのカラムに set_pw_date を追加。
 - 当面実装予定のない extension *.wiki を仕様から削除。
 - ログイン後のリダイレクトパスがずれることがある問題を修正。
 - $site->get_bros() が、トップページの兄弟に2階層目のページを返す不具合を修正。
