autoindex機能が作成した目次が、Firefoxで正常に機能しない不具合を修正。 - urlencode() していたのが原因だった模様。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -19,6 +19,7 @@
 - 当面実装予定のない extension *.wiki を仕様から削除。
 - ログイン後のリダイレクトパスがずれることがある問題を修正。
 - $site->get_bros() が、トップページの兄弟に2階層目のページを返す不具合を修正。
+- autoindex機能が作成した目次が、Firefoxで正常に機能しない不具合を修正。
 
 
 ■PxFW 1.0.0b1 (2012/12/6)
