--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,6 +2,11 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
+■PxFW 1.0.0b3 (****/**/**)
+
+- 設定項目 paths_ignore が効かないパターンがある不具合を修正。
+
+
 ■PxFW 1.0.0b2 (2013/1/6)
 
 - プラグインの仕組みを追加。object, initializeプラグインの実装規則を規定。
