--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -10,6 +10,7 @@
 - PX=rdb で、テーブル一覧表示、SELECT文発行、行数取得の操作をリンククリックで実行できるようにした。
 - $px->theme()->mk_link() のオプションに no_escape を追加。
 - 設定項目 system.default_theme_id を追加。
+- 設定項目 system.session_expire を追加。
 - 設定項目 paths_ignore が効かないパターンがある不具合を修正。
 - ドキュメントモジュール設計を整理。.imagereplaceを.imgrepに改名、マージン制御、パディング制御系のモジュールを追加など。
 - その他の細かい修正。
