--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -4,7 +4,9 @@
 
 ■PxFW 1.0.0b4 (****/**/**)
 
-- $site->get_bros_next(), $site->get_bros_prev() を追加。
+- $site->get_next(), $site->get_prev(), $site->get_bros_next(), $site->get_bros_prev() を追加。
+- $site->get_bros(), $site->get_children() に、オプション filter(bool,デフォルト true) を追加。ここに false を渡すと、無条件に全部のページを対象として検索する。
+
 
 ■PxFW 1.0.0b3 (2013/3/2)
 
@@ -18,6 +20,7 @@
 - 設定項目 paths_ignore が効かないパターンがある不具合を修正。
 - ドキュメントモジュール設計を整理。.imagereplaceを.imgrepに改名、マージン制御、パディング制御系のモジュールを追加など。
 - その他の細かい修正。
+
 
 ■PxFW 1.0.0b2 (2013/1/6)
 
