--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -6,6 +6,7 @@
 
 - $site->get_next(), $site->get_prev(), $site->get_bros_next(), $site->get_bros_prev() を追加。
 - $site->get_bros(), $site->get_children() に、オプション filter(bool,デフォルト true) を追加。ここに false を渡すと、無条件に全部のページを対象として検索する。
+- パブリッシュ時に、環境によって /index.html しかパブリッシュされない場合がある不具合を修正。
 
 
 ■PxFW 1.0.0b3 (2013/3/2)
