--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,9 +2,10 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
-■PxFW 1.0.0b4 (****/**/**)
+■PxFW 1.0.0b4 (2013/3/31)
 
 - プラグインに publish API を追加。パブリッシュ時にファイルを加工する。
+- PX=api.get.version を追加。
 - $site->get_next(), $site->get_prev(), $site->get_bros_next(), $site->get_bros_prev() を追加。
 - $site->get_bros(), $site->get_children() に、オプション filter(bool,デフォルト true) を追加。ここに false を渡すと、無条件に全部のページを対象として検索する。
 - パブリッシュ時に、環境によって /index.html しかパブリッシュされない場合がある不具合を修正。
