ドキュメント更新。
- 表紙にロゴを入れた。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,6 +2,11 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
+■PxFW 1.0.0 (2013/**/**)
+
+- ドキュメント更新。
+
+
 ■PxFW 1.0.0b4 (2013/3/31)
 
 - プラグインに publish API を追加。パブリッシュ時にファイルを加工する。
