コンフィグ項目 publish.paths_ignore の機能を拡張。(for issue #32)
- ワイルドカードを使用できるようになった。
- 改行のほか、カンマとセミコロンで区切れるようになった。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -4,6 +4,8 @@
 
 ■PxFW 1.0.0 (2013/**/**)
 
+- コンフィグ項目 publish.paths_ignore で、ワイルドカードを使用できるようになった。
+- コンフィグ項目 publish.paths_ignore で、改行のほか、カンマとセミコロンで区切れるようになった。
 - サイトマップのパスに、javascript:, http://, # で始まるパスを書けるようになった。
 - ドキュメント更新。
 
