プラグインの publish API に、before_execute(), after_execute(), after_copying() を追加。
- publish.paths_ignore にディレクトリの指定があった場合に、中身は正しく対象外扱いになるが、指定ディレクトリ自体がパブリッシュされてしまう不具合を修正。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -7,6 +7,7 @@
 - コンフィグ項目 publish.paths_ignore で、ワイルドカードを使用できるようになった。
 - コンフィグ項目 publish.paths_ignore で、改行のほか、カンマとセミコロンで区切れるようになった。
 - サイトマップのパスに、javascript:, http://, # で始まるパスを書けるようになった。
+- プラグインの publish API に、before_execute(), after_execute(), after_copying() を追加。
 - ドキュメント更新。
 
 
