サイトマップのツリー構造をキャッシュするようにした。
- $site->get_children(), $site->get_bros() などの検索パフォーマンスが向上した。
- 他、コメントなど修正。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -5,6 +5,7 @@
 ■PxFW 1.0.0b6 (2013/**/**)
 
 - $req->get_all_params() を追加。パラメータをすべて返す。
+- サイトマップのツリー構造をキャッシュするようにした。 $site->get_children(), $site->get_bros() などの検索パフォーマンスが向上した。
 
 
 ■PxFW 1.0.0b5 (2013/4/30)
