--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -6,6 +6,7 @@
 
 - $req->get_all_params() を追加。パラメータをすべて返す。
 - サイトマップのツリー構造をキャッシュするようにした。 $site->get_children(), $site->get_bros() などの検索パフォーマンスが向上した。
+- サイトマップのpath欄に書いた外部リンク、アンカーリンク、JavaScriptコードで、index.html の省略・自動付加の処理を行わないように変更。
 
 
 ■PxFW 1.0.0b5 (2013/4/30)
