プラグインに info API を追加。バージョン情報を返すインターフェイスを定義した。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -5,6 +5,7 @@
 ■PxFW 1.0.0b6 (2013/**/**)
 
 - $req->get_all_params() を追加。パラメータをすべて返す。
+- プラグインに info API を追加。バージョン情報を返すインターフェイスを定義した。
 - サイトマップのツリー構造をキャッシュするようにした。 $site->get_children(), $site->get_bros() などの検索パフォーマンスが向上した。
 - サイトマップのpath欄に書いた外部リンク、アンカーリンク、JavaScriptコードで、index.html の省略・自動付加の処理を行わないように変更。
 
