--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -8,6 +8,7 @@
 - プラグインに info API を追加。バージョン情報を返すインターフェイスを定義した。
 - サイトマップのツリー構造をキャッシュするようにした。 $site->get_children(), $site->get_bros() などの検索パフォーマンスが向上した。
 - サイトマップのpath欄に書いた外部リンク、アンカーリンク、JavaScriptコードで、index.html の省略・自動付加の処理を行わないように変更。
+- t::data2jssrc() の文字列型のエスケープ処理に存在した不具合を修正。
 
 
 ■PxFW 1.0.0b5 (2013/4/30)
