--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -6,6 +6,8 @@
 
 - $req->get_all_params() を追加。パラメータをすべて返す。
 - プラグインに info API を追加。バージョン情報を返すインターフェイスを定義した。
+- パブリッシュ時に、拡張子 *.php のファイルは、スキップせず copy で出力されるように変更した。
+- パブリッシュ時に、拡張子 *.nopublish のファイルをスキップするように変更した。
 - サイトマップのツリー構造をキャッシュするようにした。 $site->get_children(), $site->get_bros() などの検索パフォーマンスが向上した。
 - サイトマップのpath欄に書いた外部リンク、アンカーリンク、JavaScriptコードで、index.html の省略・自動付加の処理を行わないように変更。
 - t::data2jssrc() の文字列型のエスケープ処理に存在した不具合を修正。
