--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -10,6 +10,7 @@
 - パブリッシュ時に、拡張子 *.nopublish のファイルをスキップするように変更した。
 - サイトマップのツリー構造をキャッシュするようにした。 $site->get_children(), $site->get_bros() などの検索パフォーマンスが向上した。
 - サイトマップのpath欄に書いた外部リンク、アンカーリンク、JavaScriptコードで、index.html の省略・自動付加の処理を行わないように変更。
+- ユーザーのパスワード保存時のハッシュアルゴリズムを、md5 から sha1 に変更。
 - t::data2jssrc() の文字列型のエスケープ処理に存在した不具合を修正。
 - 巨大なサイトマップを扱う場合に、キャッシュ生成の処理の途中でタイムアウトが起きうる問題を修正。
 
