--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -14,6 +14,7 @@
 - t::data2jssrc() の文字列型のエスケープ処理に存在した不具合を修正。
 - 巨大なサイトマップを扱う場合に、キャッシュ生成の処理の途中でタイムアウトが起きうる問題を修正。
 - フィルタを無効にした場合のサイトマップのページツリーキャッシュが正しく生成されていない不具合を修正。
+- $dbh->rmdir_all() を $dir->rm() に改名。
 
 
 ■PxFW 1.0.0b5 (2013/4/30)
