$theme->mk_link() のオプションに current を追加。
- true で強制的にカレント
- false で強制的にカレントなし
- null で自動判別(デフォルト)

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -15,6 +15,7 @@
 - 巨大なサイトマップを扱う場合に、キャッシュ生成の処理の途中でタイムアウトが起きうる問題を修正。
 - フィルタを無効にした場合のサイトマップのページツリーキャッシュが正しく生成されていない不具合を修正。
 - $dbh->rmdir_all() を $dir->rm() に改名。
+- $theme->mk_link() のオプションに current を追加。true で強制的にカレント、false で強制的にカレントなし、null で自動判別。
 
 
 ■PxFW 1.0.0b5 (2013/4/30)
