プラグインオブジェクトを生成するタイミングを、"最初に一括して" ではなく、"初めて呼び出されたとき" に変更。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,6 +2,11 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
+■PxFW 1.0.0b7 (2013/**/**)
+
+- プラグインオブジェクトを生成するタイミングを、"最初に一括して" ではなく、"初めて呼び出されたとき" に変更。
+
+
 ■PxFW 1.0.0b6 (2013/6/8)
 
 - $req->get_all_params() を追加。パラメータをすべて返す。
