コンフィグの publish.paths_ignore に、物理的に存在しないがサイトマップに登録しているパスを設定している場合に、除外されない不具合を修正。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -10,6 +10,7 @@
 - テーマリソースキャッシュの仕組みを実装した。
 - $user->get_onetime_hash(), $user->use_onetime_hash() を追加。二重送信防止用の機能として。
 - コンフィグにコマンドのパスを設定する commands を追加。
+- コンフィグの publish.paths_ignore に、物理的に存在しないがサイトマップに登録しているパスを設定している場合に、除外されない不具合を修正。
 
 
 ■PxFW 1.0.0b6 (2013/6/8)
