バージョン1.0.0b7 リリース
- プラグインオブジェクトを生成するタイミングを、"最初に一括して" ではなく、"初めて呼び出されたとき" に変更。
- $px->get_theme_resource_dir() を $px->path_theme_files() に変更。
- $px->get_theme_resource_dir_realpath() を $px->realpath_theme_files() に変更。
- $px->realpath_theme_files() の引数に、リソースのパスを指定できるようにした。
- $px->path_files(), $px->realpath_files() の引数を、リソースのパスに変更。
- $px->path_files_cache(), $px->realpath_files_cache() を追加。
- ドキュメントモジュール仕様を更新。
-- 新たに、ボックスモジュールのカテゴリを追加。
-- .must を追加。.form_elements から独立。
-- ul.horizontal を追加。
- テーマリソースキャッシュの仕組みを実装した。
- $user->get_onetime_hash(), $user->use_onetime_hash() を追加。二重送信防止用の機能として。
- $site->is_page_in_breadcrumb() を追加。
- $site->get_page_id_by_path() を追加。
- $site->get_page_path_by_id() を追加。
- コンフィグにコマンドのパスを設定する commands を追加。
- コンフィグの publish.paths_ignore に、物理的に存在しないがサイトマップに登録しているパスを設定している場合に、除外されない不具合を修正。
- コンフィグの project.path_top に "/" 以外のパスを設定している場合に、トップページではない "/" がサイトマップ上に存在すると、ただしい階層解釈ができなくなる不具合を修正。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,7 +2,7 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
-■PxFW 1.0.0b7 (2013/**/**)
+■PxFW 1.0.0b7 (2013/7/20)
 
 - プラグインオブジェクトを生成するタイミングを、"最初に一括して" ではなく、"初めて呼び出されたとき" に変更。
 - $px->get_theme_resource_dir() を $px->path_theme_files() に変更。
