$px->path_theme_files() でテーマのリソースファイルにアクセスしている場合に、リソースが正しくパブリッシュされない不具合を修正。
- $px->path_theme_files() が、$px->add_relatedlink() に対して誤ったパスを渡していた。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -4,7 +4,7 @@
 
 ■PxFW 1.0.0b8 (2013/**/**)
 
-- 
+- $px->path_theme_files() でテーマのリソースファイルにアクセスしている場合に、リソースが正しくパブリッシュされない不具合を修正。$px->path_theme_files() が、$px->add_relatedlink() に対して誤ったパスを渡していた。
 
 
 ■PxFW 1.0.0b7 (2013/7/20)
