※バージョン番号をナイトリービルドに変更

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,6 +2,11 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
+■PxFW 1.0.0b9 (2013/**/**)
+
+- 
+
+
 ■PxFW 1.0.0b8 (2013/8/29)
 
 - コンフィグ項目に colors.main を追加。
