PX=themes で、ドットで始まる名前もテーマ一覧から除外するようにした。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -4,7 +4,8 @@
 
 ■PxFW 1.0.0b9 (2013/**/**)
 
-- 
+- PX=themes で、ディレクトリ以外と、ドットで始まる名前をテーマとして認識しないように修正。
+- その他、いくつかの不具合を修正。
 
 
 ■PxFW 1.0.0b8 (2013/8/29)
