--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -5,6 +5,7 @@
 ■PxFW 1.0.0b9 (2013/**/**)
 
 - PX=themes で、ディレクトリ以外と、ドットで始まる名前をテーマとして認識しないように修正。
+- テーマのレイアウトに top(トップページ用レイアウト) を追加。
 - その他、いくつかの不具合を修正。
 
 
