--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -6,6 +6,7 @@
 
 - PX=themes で、ディレクトリ以外と、ドットで始まる名前をテーマとして認識しないように修正。
 - テーマのレイアウトに top(トップページ用レイアウト) を追加。
+- $theme->mk_link() のオプションに class を追加。
 - その他、いくつかの不具合を修正。
 
 
