--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -8,6 +8,7 @@
 - テーマのレイアウトに top(トップページ用レイアウト) を追加。
 - $theme->mk_link() のオプションに class を追加。
 - ドキュメントモジュールを、FESS という別プロジェクトを立てて分離独立した。
+- PXコマンドのUIを改善した。
 - その他、いくつかの不具合を修正。
 
 
