--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,13 +2,14 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
-■PxFW 1.0.0b9 (2013/**/**)
+■PxFW 1.0.0b9 (2013/9/28)
 
 - PX=themes で、ディレクトリ以外と、ドットで始まる名前をテーマとして認識しないように修正。
 - テーマのレイアウトに top(トップページ用レイアウト) を追加。
 - $theme->mk_link() のオプションに class を追加。
 - ドキュメントモジュールを、FESS という別プロジェクトを立てて分離独立した。
 - $site->set_page_info() で、カレントページに layout をセットした場合に、指定したレイアウトが反映されるようになった。
+- PxXMLDomParser.php 1.0.4 に更新。
 - PXコマンドのUIを改善した。
 - その他、いくつかの不具合を修正。
 
