※バージョン番号をナイトリービルドに変更

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,6 +2,11 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
+■PxFW 1.0.0 (2013/**/**)
+
+- ********
+
+
 ■PxFW 1.0.0b9 (2013/9/28)
 
 - PX=themes で、ディレクトリ以外と、ドットで始まる名前をテーマとして認識しないように修正。
