system.output_encoding の設定で文字コード変換するときに、metaタグの体裁を維持するように修正。
- for Issue #42

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -5,6 +5,7 @@
 ■PxFW 1.0.0 (2013/**/**)
 
 - 動的に生成したページをパスで検索した場合に見つけられないことがある不具合を修正。
+- system.output_encoding の設定で文字コード変換するときに、metaタグの体裁を維持するように修正。
 
 
 ■PxFW 1.0.0b9 (2013/9/28)
