--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -6,6 +6,7 @@
 
 - 動的に生成したページをパスで検索した場合に見つけられないことがある不具合を修正。
 - system.output_encoding の設定で文字コード変換するときに、metaタグの体裁を維持するように修正。
+- サイトマップで、トップページに当たるページにIDが振られている場合、これを無視して空白文字列に置き換えるようにした。
 
 
 ■PxFW 1.0.0b9 (2013/9/28)
