プラグインに extensions API を追加。コンテンツの拡張子別の処理をプラグインから制御できるようにした。
- for Issue #43

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -8,6 +8,7 @@
 - system.output_encoding の設定で文字コード変換するときに、metaタグの体裁を維持するように修正。
 - サイトマップで、トップページに当たるページにIDが振られている場合、これを無視して空白文字列に置き換えるようにした。
 - extension *.md で、PHPを書けるようにした。PxFW のAPIにアクセスできるようになった。
+- プラグインに extensions API を追加。コンテンツの拡張子別の処理をプラグインから制御できるようにした。
 
 
 ■PxFW 1.0.0b9 (2013/9/28)
