コンフィグに拡張子別のパブリッシュ方法を設定する publish_extensions を追加。
- for Issue #45

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -9,6 +9,7 @@
 - サイトマップで、トップページに当たるページにIDが振られている場合、これを無視して空白文字列に置き換えるようにした。
 - extension *.md で、PHPを書けるようにした。PxFW のAPIにアクセスできるようになった。
 - プラグインに extensions API を追加。コンテンツの拡張子別の処理をプラグインから制御できるようにした。
+- コンフィグに拡張子別のパブリッシュ方法を設定する publish_extensions を追加。
 
 
 ■PxFW 1.0.0b9 (2013/9/28)
