--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -10,6 +10,7 @@
 - extension *.md で、PHPを書けるようにした。PxFW のAPIにアクセスできるようになった。
 - プラグインに extensions API を追加。コンテンツの拡張子別の処理をプラグインから制御できるようにした。
 - コンフィグに拡張子別のパブリッシュ方法を設定する publish_extensions を追加。
+- コンフィグにインクルード機能 _include を追加。
 
 
 ■PxFW 1.0.0b9 (2013/9/28)
