$theme->mk_link() で、リンク先ページの layout が popup だった場合に別窓のリンクを生成するが、 popup で始まるもの全てで別窓にするように挙動を変更した。

--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -9,6 +9,7 @@
 - サイトマップで、トップページに当たるページにIDが振られている場合、これを無視して空白文字列に置き換えるようにした。
 - extension *.md で、PHPを書けるようにした。PxFW のAPIにアクセスできるようになった。
 - プラグインに extensions API を追加。コンテンツの拡張子別の処理をプラグインから制御できるようにした。
+- $theme->mk_link() で、リンク先ページの layout が popup だった場合に別窓のリンクを生成するが、 popup で始まるもの全てで別窓にするように挙動を変更した。
 - コンフィグに拡張子別のパブリッシュ方法を設定する publish_extensions を追加。
 - コンフィグにインクルード機能 _include を追加。
 
