--- a/_docs/changelog.txt
+++ b/_docs/changelog.txt
@@ -2,6 +2,11 @@
  * PxFW(Pickles Framework) 更新履歴
  */
 
+■PxFW 1.0.0 (2013/**/**)
+
+- ******
+
+
 ■PxFW 1.0.0b10 (2013/10/31)
 
 - コンフィグに拡張子別のパブリッシュ方法を設定する publish_extensions を追加。
