(気になったので微修正)

--- a/htdocs/sample_pages/page1/3.html.md
+++ b/htdocs/sample_pages/page1/3.html.md
@@ -1,7 +1,7 @@
 
 このコンテンツは、Markdown形式でページを生成するサンプルです。
 
-Pickles Framework でMarkdownを使用するには、ファイル名の最後に、拡張子 <code>.md</code> を追加します(例 <code>index.html</code> であれば、<code>index.html.md</code>)。
+Pickles Framework で Markdown を使用するには、ファイル名の最後に、拡張子 `.md` を追加します(例 `index.html` であれば、`index.html.md`)。
 
 どのように記述してこのHTMLがつくられているか、コンテンツのソースコードをみて確認してください。
 
